# routee-transit

./: .gitignore  AGENTS.md  GTFS.command  LICENSE.md  NRT_trip_sample.csv  README.md  RouteE_Test_Vehicle.json  _01_Route_Predict.ipynb  api.html  contributing.html  data.html  genindex.html  index.html  installation.html  objects.inv  prediction.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy-docs.yaml  test-python.yaml  test-rust.yaml
GTFS_Dashboard/: _00_Extract_Shape.ipynb  _01_Run_Batch.sh  _01_Trip_Feature_for_Energy_Estimation.py  _02_RouteE_Energy_Estimation.ipynb  _03_Design_Block.ipynb  _03_Match_Depot.ipynb  _04_Design_Block.ipynb
GTFS_Dashboard/Temp_HVAC/: infer_state_monthly_ecr_scaler.ipynb
GTFS_Data/Niagara_Region_Transit/: agency.txt  calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stops.txt  trips.txt
GTFS_processing/: GTFS_data.py
TMY/: G4900030.csv  G4900110.csv  G4900350.csv  G4900430.csv  G4900490.csv  G4900570.csv
_sources/examples/: Utah_Transit_Agency_example.ipynb
docs/: _config.yml  _toc.yml  api.rst  contributing.md  data.md  index.md  installation.md  prediction.md  results.md
docs/examples/: Utah_Transit_Agency.ipynb  Utah_Transit_Agency_example.py  _convert_examples.py  example.py
examples/: Utah_Transit_Agency_example.html
gtfs_realtime/: pyproject.toml  scraper.py
nrel/routee/transit/: __init__.py  between_trip_deadhead.py  deadhead_router.py  depot_deadhead.py  gtfs_feature_processing.py  gtfs_processing.py  mid_block_deadhead.py  predictor.py  thermal_energy.py
nrel/routee/transit/grade/: add_grade.py  download.py
nrel/routee/transit/prediction/: __init__.py  add_temp_feature.py  between_trip_deadhead.py  depot_deadhead.py  generate_deadhead_traces.py  gtfs_feature_processing.py  predictor.py  routee.py
nrel/routee/transit/prediction/grade/: add_grade.py  download.py  tile_resolution.py
routee-transit/tests/: __init__.py  testMapmatch.py
routee/transit/: __init__.py  compass_app.py  deadhead_router.py  depot_deadhead.py  gtfs_processing.py  mid_block_deadhead.py  predictor.py  thermal_energy.py
routee/transit/grade/: add_grade.py  download.py  tile_resolution.py
routee/transit/resources/: transit_energy.toml
routee/transit/resources/sample_inputs/FTA_Depot/: Transit_Depot.dbf  Transit_Depot.shp  Transit_Depot.shx
routee/transit/resources/sample_inputs/saltlake/gtfs/: calendar.txt  calendar_dates.txt  feed_info.txt  stops.txt  trips.txt
routee_transit/prediction/: gtfs_feature_processing.py  routee.py
routee_transit/vehicle_models/: SLC_BEB.json
rust/: Cargo.toml
rust/routee-transit/: Cargo.toml
rust/routee-transit-py/: Cargo.toml
rust/routee-transit-py/src/: lib.rs  transit_app_py.rs
rust/routee-transit/src/: lib.rs
rust/routee-transit/src/model/: builder.rs
rust/routee-transit/src/model/traversal/: gtfs_stops.rs  mod.rs  transit_bev_energy_model.rs  transit_energy_model_builder.rs  transit_energy_model_service.rs  transit_ice_energy_model.rs  transit_traversal.rs
sample-inputs/saltlake/gtfs/: routes.txt  shapes.txt
scripts/: README.md  fta_app_sample_results.py  single_agency_full_analysis.py
scripts/feeds/: README.md  extract_static_gtfs.py  gather_feeds.py  map_feeds.py
scripts/gtfs_realtime/: README.md  aggregate_speeds.py  build_speeds_map.py  pyproject.toml  scraper.py
tests/: Untitled.ipynb  testAPI.py  testGTFS_processing.py  test_betweentrip_deadhead.ipynb  test_deadhead_router.py  test_depot_deadhead.py  test_e2e.py  test_gtfs_processing.py  test_mid_block_deadhead.py  test_predictor.py  test_stub.py  test_thermal_energy.py
utils/: .env  _init_.py  requirements.txt
