[project]
name = "routee-transit"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas>=2.0",
    "gtfsblocks>=0.1.2,<0.2",
    "nrel-routee-powertrain>=1.3.0,<2",
    "geopy>=2.4.1,<3",
    "gradeit>=0.1.2,<0.2",
    "mappymatch>=0.6.1,<0.7",
    "geopandas>=1.1.1,<2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ipykernel",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.pypi-dependencies]
routee_transit = { path = ".", editable = true }
