[project]
name = "nrel.routee.transit"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0",
    "gtfsblocks>=0.1.2,<0.2",
    "nrel-routee-powertrain>=1.3.2,<2",
    "geopy>=2.4.1,<3",
    "gradeit>=0.1.2,<0.2",
    "mappymatch>=0.6.1,<0.7",
    "geopandas>=1.1.1,<2",
    "requests>=2.31.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "mypy>=1.14,<2.0",
    "pytest-order>=1.3,<2.0",
    "ruff>=0.9,<1.0",
    "hatch>=1.14,<2.0",
    "ipykernel>6.29,<7.0",
    "jupyter-book>=1.0,<2.0",
    "pandas-stubs>=2.0,<3.0",
    "types-requests"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["nrel"]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
strict = true
disallow_untyped_calls = false
exclude = ["dist/", "build/", ".local", "notebooks/"]


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "win-64"]

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
default = { solve-group = "default" }
py310 = { features = ["py310"] }
py311 = { features = ["py311"] }
py312 = { features = ["py312"] }
dev-py310 = { features = ["py310", "dev"], solve-group = "py310" }
dev-py311 = { features = ["py311", "dev"], solve-group = "py311" }
dev-py312 = { features = ["py312", "dev"], solve-group = "py312" }

[tool.pixi.feature.dev.tasks]
fmt_fix = "ruff format"
fmt_check = "ruff format --check"
lint_check = "ruff check"
lint_fix = "ruff check --fix"
typing = "mypy ."
test = "pytest tests/"
docs = "jupyter-book build docs"
check = { depends-on = ["fmt_fix", "lint_fix", "typing", "test"] }
ci = { depends-on = ["fmt_check", "lint_check", "typing", "test"] }

[tool.pixi.pypi-dependencies]
nrel-routee-transit = { path = ".", editable = true }
