[package]
name = "routee-transit"
version = "0.3.0"
edition = "2021"

[dependencies]
config = "0.14"
csv = "1.3"
log = "0.4"
routee-compass = "0.18.0"
routee-compass-core = "0.18.0"
routee-compass-powertrain = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uom = "0.36"
